# django-api-frameworks

./: docker-compose.yml  justfile  readme.md
django-bolt-example/: Dockerfile
django-bolt-example/car/: api.py
django-example/: Dockerfile  pyproject.toml
django-example/car/: models.py  urls.py  views.py
django-example/car/migrations/: 0002_car_json_data_carmodel_json_data.py
django-example/config/: rsgi.py  wsgi.py
django-hatchway-example/: Dockerfile  pyproject.toml  wait_for_db.sh
django-hatchway-example/car/: admin.py  models.py  schemas.py  urls.py  views.py
django-hatchway-example/car/migrations/: 0001_initial.py
django-hatchway-example/config/: asgi.py  settings.py  urls.py
django-ninja-example/: Dockerfile
django-rapid-example/: Dockerfile
django-shinobi/: pyproject.toml
django-shinobi-example/: Dockerfile
djangorestframework-example/: Dockerfile
djrest2-example/: Dockerfile
djrest2-example/car/: urls.py  views.py
fastapi/: database.py  main.py  pyproject.toml  schemas.py
fastapi-example/: Dockerfile  database.py
fastapi-example/car/: api.py
fastapi/car/: api.py  models.py  service.py
fastapi/tests/: test_api.py
load-testing/: Dockerfile  locustfile.py
load-testing/tests/: test_benchmark.py  test_validate.py  utils.py
